chore: housekeeping and adding .idea commons